# casper-cbc-proofs

./: #refinement.v#  .#refinement.v  .coqdeps.d  .depend  .gitignore  Dockerfile  Jenkinsfile  LICENSE.md  ListExtras.v  ListSetExtras.v  Makefile  Makefile.coq.local  README.md  RealsExtras.v  _CoqProject  anotherprotocol.v  binary.v  binary_eq.v  binary_full_eq.v  binary_light_eq.v  common.v  commute.v  composed_vlsm.v  composed_vlsm_projections.v  coq-casper-cbc.opam  ctl.v  definitions.v  dependency_graph.v  dune  dune-project  fault_weights.v  fault_weights.v~  fullnode.v  fullnode_eq.v  fullnode_syntactic.v  indexed_vlsm.v  indexed_vlsm_projections.v  lightnode.v  lightnode_eq.v  list_of_vlsms.v  (+23 more)
CBC/: Binary.v  CTL.v  Common.v  Definitions.v  Equivocation.v  FullNode.v  FullNodeSimpleVLSM.v  LightNode.v  Protocol.v
Lib/: Classes.v  Fin.v  FinExtras.v  FinFunExtras.v  ListExtras.v  ListSetExtras.v  ListTactics.v  ListUtil.v  Measurable.v  Preamble.v  RealsExtras.v  SortedLists.v  SsrExport.v  StreamExtras.v  TopSort.v  TraceClassicalProperties.v  TraceProperties.v  Traces.v
VLSM/: Actions.v  ByzantineFaults.v  ByzantineTraces.v  Common.v  CommonFutures.v  CommonTraces.v  Composition.v  Decisions.v  DependentMessages.v  ELMO.v  Equivocation.v  FullNode.v  FullNodeComposite.v  FullNodeSimple.v  GenericTraceProjection.v  Liveness.v  ObservableEquivocation.v  Plans.v  PreceedsEquivocation.v  ProjectionTraces.v  SubProjectionTraces.v  Validating.v
old/: composed_vlsm.v  composed_vlsm_projections.v  dependency_graph.v  locally_sorted.v  plsm.v
report/: .gitignore  (+6 more)
(+113 files in other folders)
